# advent-of-code-2025

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
src/util/: direction.rs  math.rs  mod.rs  num.rs  slice.rs  vector.rs
